# family

./: .gitignore  CLAUDE.md  DESIGN-EDU-STANDARDS.md  LICENSE  PLAN-EDU-STANDARDS.md  README.md  REQUIREMENTS-EDU.md  REQUIREMENTS.md  ROADMAP.md
.claude/agents/: cadence-analyzer.md  history-miner.md  momentum-tracker.md  plan-delta.md  radar-scanner.md  state-scanner.md
.claude/commands/: family-checkin.md  family-edu.md  family-init.md  family-log.md  family-plan.md  family-status.md
.githooks/: pre-commit
project/: PLAN-STRUCTURED-TRACKING.md  REQUIREMENTS.md  ROADMAP.md
scripts/ingest-standards/: README.md  pyproject.toml
scripts/ingest-standards/src/ingest_standards/: __init__.py  cli.py  emitter.py  models.py  progressions.py  schema.py  validator.py
scripts/ingest-standards/src/ingest_standards/adapters/: __init__.py  csp.py  opensalt.py  pdf.py
scripts/ingest-standards/src/ingest_standards/prompts/: __init__.py  ela.md  science.md  social_studies.md
scripts/ingest-standards/tests/: test_emitter.py  test_models.py  test_opensalt.py  test_opensalt_live.py  test_schema.py  test_validator.py
scripts/vector-store/: pyproject.toml
scripts/vector-store/src/vector_store/: chunker.py  cli.py  store.py
scripts/vector-store/tests/: test_chunker.py  test_store.py
standards/indiana/: manifest.yaml  math-1.yaml  math-2.yaml  math-3.yaml  math-4.yaml  math-5.yaml  math-k.yaml  process-standards.yaml  progressions.md  summary.md
