[project]
name = "ingest-standards"
version = "0.1.0"
description = "Ingest and validate Indiana Academic Standards from public sources"
authors = [
    { name = "pqmcgill", email = "pqmcgill@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ingest-standards = "ingest_standards.cli:main"

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ty.environment]
python-version = "3.12"
